// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Table - renders 1`] = `
<table
  className="table"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with class name sortable when sortable prop is included 1`] = `
<table
  className="table sortable"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
        <button
          className="svg-container"
          id="sortable-id-0"
        >
          <svg
            aria-hidden="true"
            className="sort-svg"
            viewBox="0 0 100 150"
            width="100%"
          >
            <rect
              fill="none"
              height="100%"
              stroke="none"
              width="100%"
              x="0"
              y="0"
            />
            <g>
              <path
                className="sort sort-down"
                d="M14.532583675302659,111.38865158861287 L14.532583675302659,44.40074494634466 L82.65465743819536,111.38865158861287 L14.532583675302659,111.38865158861287 z"
                transform="rotate(-45 48.59361267089846,77.8946990966797)"
              />
              <path
                className="sort sort-up"
                d="M14.64011075250069,82.46391938036092 L14.64011075250069,15.476012738092706 L82.76218451539339,82.46391938036092 L14.64011075250069,82.46391938036092 z"
                transform="rotate(135.10440063476562 48.70114517211913,48.96996307373047)"
              />
            </g>
          </svg>
        </button>
      </th>
      <th
        onClick={[Function]}
      >
        Name
        <button
          className="svg-container"
          id="sortable-id-1"
        >
          <svg
            aria-hidden="true"
            className="sort-svg"
            viewBox="0 0 100 150"
            width="100%"
          >
            <rect
              fill="none"
              height="100%"
              stroke="none"
              width="100%"
              x="0"
              y="0"
            />
            <g>
              <path
                className="sort sort-down"
                d="M14.532583675302659,111.38865158861287 L14.532583675302659,44.40074494634466 L82.65465743819536,111.38865158861287 L14.532583675302659,111.38865158861287 z"
                transform="rotate(-45 48.59361267089846,77.8946990966797)"
              />
              <path
                className="sort sort-up"
                d="M14.64011075250069,82.46391938036092 L14.64011075250069,15.476012738092706 L82.76218451539339,82.46391938036092 L14.64011075250069,82.46391938036092 z"
                transform="rotate(135.10440063476562 48.70114517211913,48.96996307373047)"
              />
            </g>
          </svg>
        </button>
      </th>
      <th
        onClick={[Function]}
      >
        Status
        <button
          className="svg-container"
          id="sortable-id-2"
        >
          <svg
            aria-hidden="true"
            className="sort-svg"
            viewBox="0 0 100 150"
            width="100%"
          >
            <rect
              fill="none"
              height="100%"
              stroke="none"
              width="100%"
              x="0"
              y="0"
            />
            <g>
              <path
                className="sort sort-down"
                d="M14.532583675302659,111.38865158861287 L14.532583675302659,44.40074494634466 L82.65465743819536,111.38865158861287 L14.532583675302659,111.38865158861287 z"
                transform="rotate(-45 48.59361267089846,77.8946990966797)"
              />
              <path
                className="sort sort-up"
                d="M14.64011075250069,82.46391938036092 L14.64011075250069,15.476012738092706 L82.76218451539339,82.46391938036092 L14.64011075250069,82.46391938036092 z"
                transform="rotate(135.10440063476562 48.70114517211913,48.96996307373047)"
              />
            </g>
          </svg>
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with class name table-condensed when condensed prop is included 1`] = `
<table
  className="table table-condensed"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with class name table-divided when divided prop is included 1`] = `
<table
  className="table table-divided"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with class name table-hover when hover prop is included 1`] = `
<table
  className="table table-hover"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with class name table-plain when plain prop is included 1`] = `
<table
  className="table table-plain"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Component: Table - renders with no class name plain, condensed, hover, divided or sortable when props are not included 1`] = `
<table
  className="table"
>
  <caption>
    Test
  </caption>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        #
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th
        onClick={[Function]}
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        1
      </th>
      <td>
        McGregor
      </td>
      <td>
        <span
          className="status status-success"
        >
          Success
        </span>
      </td>
    </tr>
    <tr>
      <th>
        2
      </th>
      <td>
        Sean O'Malley
      </td>
      <td>
        <span
          className="status status-danger"
        >
          Danger
        </span>
      </td>
    </tr>
    <tr>
      <th>
        3
      </th>
      <td>
        Bisping
      </td>
      <td>
        <span
          className="status status-neutral"
        >
          Neutral
        </span>
      </td>
    </tr>
    <tr>
      <th>
        4
      </th>
      <td>
        Mike Perry
      </td>
      <td>
        <span
          className="status status-inactive"
        >
          Inactive
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
